--- a/ndmanager/src/generalinfolayout.ui
+++ b/ndmanager/src/generalinfolayout.ui
@@ -44,7 +44,7 @@
                         </size>
                     </property>
                 </spacer>
-                <widget class="KTextEdit" row="4" column="2">
+                <widget class="QTextEdit" row="4" column="2">
                     <property name="name">
                         <cstring>notesTextEdit</cstring>
                     </property>
@@ -184,7 +184,7 @@
                         <string>Date</string>
                     </property>
                 </widget>
-                <widget class="KTextEdit" row="3" column="2">
+                <widget class="QTextEdit" row="3" column="2">
                     <property name="name">
                         <cstring>descriptionTextEdit</cstring>
                     </property>
