--- a/ndmanager/src/neuroscopevideolayout.ui
+++ b/ndmanager/src/neuroscopevideolayout.ui
@@ -133,19 +133,52 @@
                             <height>100</height>
                         </size>
                     </property>
-                    <property name="paletteBackgroundColor">
-                        <color>
-                            <red>0</red>
-                            <green>0</green>
-                            <blue>0</blue>
-                        </color>
-                    </property>
                     <property name="text">
                         <string></string>
                     </property>
                     <property name="scaledContents">
                         <bool>true</bool>
                     </property>
+  <property name="autoFillBackground" >
+   <bool>true</bool>
+  </property>
+  <property name="palette" >
+   <palette>
+    <active>
+     <colorrole role="Window" >
+      <brush brushstyle="SolidPattern" >
+       <color alpha="255" >
+        <red>0</red>
+        <green>0</green>
+        <blue>0</blue>
+       </color>
+      </brush>
+     </colorrole>
+    </active>
+    <inactive>
+     <colorrole role="Window" >
+      <brush brushstyle="SolidPattern" >
+       <color alpha="255" >
+        <red>0</red>
+        <green>0</green>
+        <blue>0</blue>
+       </color>
+      </brush>
+     </colorrole>
+    </inactive>
+    <disabled>
+     <colorrole role="Window" >
+      <brush brushstyle="SolidPattern" >
+       <color alpha="255" >
+        <red>0</red>
+        <green>0</green>
+        <blue>0</blue>
+       </color>
+      </brush>
+     </colorrole>
+    </disabled>
+   </palette>
+  </property>
                 </widget>
                 <widget class="QLabel" row="5" column="0">
                     <property name="name">
