--- a/ndmanager/src/ndmanager-icons.qrc
+++ b/ndmanager/src/ndmanager-icons.qrc
@@ -1,5 +1,5 @@
 <RCC>
-    <qresource prefix="/icons">
+    <qresource prefix="/">
         <file>icons/acquisition.png</file>
         <file>icons/anatomy.png</file>
         <file>icons/files.png</file>
