--- a/ndmanager/src/queryinputdialogbase.ui
+++ b/ndmanager/src/queryinputdialogbase.ui
@@ -27,7 +27,7 @@
       </widget>
      </item>
      <item>
-      <widget class="KLineEdit" name="query"/>
+      <widget class="QLineEdit" name="query"/>
      </item>
      <item>
       <widget class="QLabel" name="textLabel1_2">
@@ -77,7 +77,7 @@
         </spacer>
        </item>
        <item>
-        <widget class="KPushButton" name="kPushButton1_2">
+        <widget class="QPushButton" name="kPushButton1_2">
          <property name="text">
           <string>O&amp;K</string>
          </property>
@@ -87,7 +87,7 @@
         </widget>
        </item>
        <item>
-        <widget class="KPushButton" name="kPushButton1">
+        <widget class="QPushButton" name="kPushButton1">
          <property name="text">
           <string>Cancel</string>
          </property>
@@ -103,16 +103,6 @@
  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
  <customwidgets>
   <customwidget>
-   <class>KLineEdit</class>
-   <extends>QLineEdit</extends>
-   <header>klineedit.h</header>
-  </customwidget>
-  <customwidget>
-   <class>KPushButton</class>
-   <extends>QPushButton</extends>
-   <header>kpushbutton.h</header>
-  </customwidget>
-  <customwidget>
    <class>KURLRequester</class>
    <extends>QWidget</extends>
    <header>kurlrequester.h</header>
@@ -123,12 +113,7 @@
   <tabstop>query</tabstop>
  </tabstops>
  <includes>
-  <include location="local">klineedit.h</include>
   <include location="local">kurlrequester.h</include>
-  <include location="local">klineedit.h</include>
-  <include location="local">kpushbutton.h</include>
-  <include location="local">kpushbutton.h</include>
-  <include location="local">kpushbutton.h</include>
  </includes>
  <resources/>
  <connections/>
