--- a/ndmanager/src/launcherlayout.ui
+++ b/ndmanager/src/launcherlayout.ui
@@ -218,7 +218,7 @@
     </widget>
    </item>
    <item row="6" column="2">
-    <widget class="KIconButton" name="kIconButton1">
+    <widget class="QPushButton" name="kIconButton1">
      <property name="text">
       <string/>
      </property>
@@ -227,13 +227,6 @@
   </layout>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <customwidgets>
-  <customwidget>
-   <class>KIconButton</class>
-   <extends>QPushButton</extends>
-   <header>kicondialog.h</header>
-  </customwidget>
- </customwidgets>
  <resources/>
  <connections/>
 </ui>
