--- a/ndmanager/src/channeloffsetslayout.ui
+++ b/ndmanager/src/channeloffsetslayout.ui
@@ -1,78 +1,68 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ui version="4.0" stdsetdef="1">
-  <author></author>
-  <comment></comment>
-  <exportmacro></exportmacro>
-  <class>ChannelOffsetsLayout</class>
-  <widget class="QWidget" name="ChannelOffsetsLayout">
-    <property name="geometry">
-      <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>219</width>
-        <height>112</height>
-      </rect>
-    </property>
-    <property name="windowTitle">
-      <string>Channel Offsets</string>
-    </property>
+<ui version="4.0">
+ <class>ChannelOffsetsLayout</class>
+ <widget class="QWidget" name="ChannelOffsetsLayout">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>219</width>
+    <height>112</height>
+   </rect>
+  </property>
+  <property name="windowTitle">
+   <string>Channel Offsets</string>
+  </property>
+  <layout class="QGridLayout">
+   <item row="0" column="0">
     <layout class="QGridLayout">
-      <item row="0" column="0">
-        <layout class="QGridLayout">
-          <item row="1" column="0" rowspan="1" colspan="2">
-            <widget class="Q3Table" name="offsetTable">
-              <property name="minimumSize">
-                <size>
-                  <width>100</width>
-                  <height>0</height>
-                </size>
-              </property>
-              <property name="numRows">
-                <number>0</number>
-              </property>
-              <property name="numCols">
-                <number>1</number>
-              </property>
-              <column>
-                <property name="text">
-                  <string>Offset</string>
-                </property>
-              </column>
-            </widget>
-          </item>
-          <item row="0" column="0">
-            <widget class="QLabel" name="textLabel1">
-              <property name="text">
-                <string>Default Channel Offsets</string>
-              </property>
-              <property name="wordWrap">
-                <bool>false</bool>
-              </property>
-            </widget>
-          </item>
-          <item row="0" column="1">
-            <spacer name="spacer10_2_3_3">
-              <property name="sizeHint">
-                <size>
-                  <width>100</width>
-                  <height>16</height>
-                </size>
-              </property>
-              <property name="sizeType">
-                <enum>QSizePolicy::Expanding</enum>
-              </property>
-              <property name="orientation">
-                <enum>Qt::Horizontal</enum>
-              </property>
-            </spacer>
-          </item>
-        </layout>
-      </item>
+     <item row="1" column="0" colspan="2">
+      <widget class="QTableWidget" name="offsetTable">
+       <property name="minimumSize">
+        <size>
+         <width>100</width>
+         <height>0</height>
+        </size>
+       </property>
+       <column>
+        <property name="text">
+         <string>Offset</string>
+        </property>
+       </column>
+      </widget>
+     </item>
+     <item row="0" column="0">
+      <widget class="QLabel" name="textLabel1">
+       <property name="text">
+        <string>Default Channel Offsets</string>
+       </property>
+       <property name="wordWrap">
+        <bool>false</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <spacer name="spacer10_2_3_3">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeType">
+        <enum>QSizePolicy::Expanding</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>100</width>
+         <height>16</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
     </layout>
-  </widget>
-  <layoutdefault spacing="6" margin="11"/>
-  <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
-  <resources>
-    <include location="channeloffsetslayout.qrc"/>
-  </resources>
+   </item>
+  </layout>
+ </widget>
+ <layoutdefault spacing="6" margin="11"/>
+ <pixmapfunction>qPixmapFromMimeSource</pixmapfunction>
+ <resources/>
+ <connections/>
 </ui>
