Start to port to qtablewidget

--- a/ndmanager/src/filelayout.ui
+++ b/ndmanager/src/filelayout.ui
@@ -88,7 +88,7 @@
               <item row="1" column="0">
                 <layout class="QGridLayout">
                   <item row="0" column="0">
-                    <widget class="Q3Table" name="mappingTable">
+                    <widget class="QTableWidget" name="mappingTable">
                       <property name="sizePolicy">
                         <sizepolicy>
                           <hsizetype>7</hsizetype>
@@ -103,14 +103,14 @@
                           <height>100</height>
                         </size>
                       </property>
-                      <property name="numRows">
+                      <property name="rowCount">
                         <number>0</number>
                       </property>
-                      <property name="numCols">
+                      <property name="columnCount">
                         <number>1</number>
                       </property>
                       <property name="selectionMode">
-                        <enum>Multi</enum>
+                        <enum>QAbstractItemView::MultiSelection</enum>
                       </property>
                       <column>
                         <property name="text">
