--- a/ndmanager/src/anatomylayout.ui
+++ b/ndmanager/src/anatomylayout.ui
@@ -144,7 +144,7 @@
                 </layout>
               </item>
               <item row="1" column="0" rowspan="1" colspan="2">
-                <widget class="Q3Table" name="groupTable">
+                <widget class="QTableWidget" name="groupTable">
                   <property name="sizePolicy">
                     <sizepolicy>
                       <hsizetype>7</hsizetype>
@@ -159,17 +159,17 @@
                       <height>100</height>
                     </size>
                   </property>
-                  <property name="vScrollBarMode">
-                    <enum>Auto</enum>
+                  <property name="verticalScrollBarPolicy">
+                    <enum>Qt::ScrollBarAsNeeded</enum>
                   </property>
-                  <property name="numRows">
+                  <property name="rowCount">
                     <number>0</number>
                   </property>
-                  <property name="numCols">
+                  <property name="columnCount">
                     <number>1</number>
                   </property>
                   <property name="selectionMode">
-                    <enum>Multi</enum>
+                    <enum>QAbstractItemView::MultiSelection</enum>
                   </property>
                   <column>
                     <property name="text">
@@ -233,7 +233,7 @@
             </widget>
           </item>
           <item row="1" column="0">
-            <widget class="Q3Table" name="attributesTable">
+            <widget class="QTableWidget" name="attributesTable">
               <property name="sizePolicy">
                 <sizepolicy>
                   <hsizetype>0</hsizetype>
@@ -248,17 +248,17 @@
                   <height>100</height>
                 </size>
               </property>
-              <property name="vScrollBarMode">
-                <enum>Auto</enum>
+              <property name="verticalScrollBarPolicy">
+                <enum>Qt::ScrollBarAsNeeded</enum>
               </property>
-              <property name="numRows">
+              <property name="rowCount">
                 <number>0</number>
               </property>
-              <property name="numCols">
+              <property name="columnCount">
                 <number>1</number>
               </property>
               <property name="selectionMode">
-                <enum>Multi</enum>
+                <enum>QAbstractItemView::MultiSelection</enum>
               </property>
               <column>
                 <property name="text">
